--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 dash==2.17.1
 plotly==5.17.0
-pandas>=2.2.0,<3.0.0
+pandas==2.1.4
 dash-bootstrap-components==1.5.0
 requests==2.31.0
 gunicorn==21.2.0
-openpyxl==3.1.2
-numpy>=1.24.0,<2.0.0
