🧹 Clean up deployment experiments - back to local development
- Remove app_no_pandas.py and runtime.txt
- Restore pandas to requirements.txt for local development
- Reset render.yaml to original app.py
- Focus on local dashboard improvements

--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: squeezemetrics-dashboard
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app_no_pandas.py
+    startCommand: python app.py
